kubernetes/programme.lv/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: proglv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: krisjanisp/proglv-backend:latest
          ports:
            - name: http
              containerPort: 3001
