kubernetes/programme.lv/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: proglv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: proglv-frontend
          image: krisjanisp/proglv-frontend:latest
          ports:
            - name: http
              containerPort: 3000
