kubernetes/programme.lv/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: proglv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: krisjanisp/proglv-backend:latest
          ports:
            - name: http
              containerPort: 3001
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: proglv
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3001
  selector:
    app: backend
