kubernetes/programme.lv/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: proglv
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3001
  selector:
    app: backend
