kubernetes/programme.lv/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: proglv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: proglv-frontend
          image: krisjanisp/proglv-frontend:latest
          ports:
            - name: http
              containerPort: 3000
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: proglv
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: frontend
