kubernetes/programme.lv/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: programme-backend
  namespace: proglv
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
      - programme.lv
      secretName: letsencrypt-nginx-proglv
  rules:
    - host: programme.lv
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
  ingressClassName: nginx 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: programme-frontend
  namespace: proglv
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
    - hosts:
      - programme.lv
      secretName: letsencrypt-nginx-proglv
  rules:
    - host: programme.lv
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
  ingressClassName: nginx
